<resources>
    <string name="app_name">Madar Test App</string>
    <string name="insert">Insert user</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job title</string>
    <string name="add_new_user">Add new user</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_name">Enter username</string>
    <string name="enter_job_title">Enter user job title</string>
    <string name="enter_age">Enter user age</string>
    <string name="succ_add_user">Successfully added a new user</string>
    <string name="sure_add_user">Are you sure want to add this user ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_all_users">Show all users</string>
</resources>